add jvm arguments and fix log4j properties